# real_receipts_analyse

./: .gitignore  pyproject.toml
project_inflation/: TASKS.md  data_processing.ipynb  main.py
project_inflation/docs/: receipts.xlsx  receipts_2.xlsx  receipts_3.xlsx
